# SpikingNeuralNetwork

./: .gitignore  404.html  CITATION.cff  CITATIONS.cff  CLAUDE.md  CODE_AUDIT.md  Container.sif.txt  DEV-README.md  DIARY.md  Gen_weights_nd_data.py  IDEAS.md  LICENSE  Main_SNN.py  OVERVIEW.md  README.md  README_IMPORTS.md  SNN_functions.py  Singularity.sif.sh  _diag_lognorm.py  _diag_training.py  bash_tutorial.txt  chatgpt_snn_stdp_lif.py  env.yml  env_linux.yml  env_windows.yml  environment.yml  environment_linux.yml  environment_windows.yml  generate_SW_weights.py  index.html  inspect_phase2.py  kk.py  linux_environment.yml  mkdocs.yml  noise_env  plot_network.py  plot_training.py  pyproject.toml  requirements-linux.txt  requirements.txt  (+7 more)
GLM/: Results_.xlsx  analysis.r
core/: big_comb.py  create_network.py  gen_symbol.py  main.py  performance.py  plot.py
docs/: index.md
experiments/: analyse_phase1.py  gather_results.py  run_experiment.py  run_sleep_tuning.py  slurm_phase1.sh  slurm_phase2.sh  submit_phase1.sh  submit_phase2.sh
latex/: sleep_sim_plot.py
multinomial/: get_data.py
multiple_log_reg/: get_data.py  main.py  plot_results.py
neurosnn/: __init__.py  layer.py  learner.py  membrane.py  model.py  regularizer.py  results.py  weights.py
noise_analysis/: LLMREAD.md  analysis.py  big_comb.py  create_network.py  environment.yml  get_data.py  main.py  main.py.lprof  plot.py  train.py  train.py.lprof  training_functions  weight_funcs.py
plots/: weight_evolution_data.npz  weight_evolution_data_no_sleep.npz
results/: quick_profile.prof  (+278 more)
src/: main.py  (+29 more)
(+1290 files in other folders)
