[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neurosnn"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "numba>=0.61",
    "tqdm>=4.0",
    "matplotlib>=3.0",
    "scikit-learn>=1.0",
    "pandas>=2.0",
    "scipy>=1.0",
    "seaborn>=0.13",
    "psutil>=5.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosnn*"]